src/objects/PR_Email__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_URL__c</fullName>
        <label>Item URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manager_Email_Body__c</fullName>
        <description>The email body to be sent to the managers will be included in this field.</description>
        <inlineHelpText>The email body to be sent to the managers will be included in this field.</inlineHelpText>
        <label>Manager Email Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowAll_Url__c</fullName>
        <label>ShowAll Url</label>
        <type>Url</type>
    </fields>
    <label>PR_Email</label>
</CustomObject>